Fixed spotbug and checkstyle issues for successful build